Fix horrible switchVisible method

--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,8 @@ input[type="checkbox"] {
   background: rgba(241,	246,	249, .7	);
   width: 70%;
   align-self: center;
+  /*padding-bottom: 200px;
+  border-bottom: 200px;*/
 }
 
 ::-webkit-input-placeholder {
@@ -165,10 +167,6 @@ html {
   -o-background-size: cover;
   background-size: cover;
   max-width: 100%;
-}
-
-.wrap {
-  display: none;
 }
 
 .wrap {
